# testtrain-pytest

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest_testtrain.py  requirements.txt  testtrain_pytest.py
.github/workflows/: pypi-publish.yml  pytest.yml
src/testtrain_pytest/: __init__.py
tests/: conftest.py  test_allure_attachments.py  test_allure_descriptions.py  test_allure_steps.py  test_allure_tags.py  test_allure_titles.py  test_no_description.py  test_parameter_cleaning.py  test_parameters.py  test_reporting_lifecycle.py
