[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testtrain-pytest"
version = "0.1.0"
description = "Testtrain Pytest Plugin — Real-time test result reporting."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "requests",
    "allure-pytest"
]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."pytest11"]
testtrain = "testtrain_pytest"
